web-view: Change zoom in LOAD_COMMITTED

Instead of changing zoom in LOAD_STARTED, wait for LOAD_COMMITTED so as
to shrink the amount of time that the zoom is wrong for. This isn't a
proper fix as WebKit's load events don't indicate when rendering has
started, and that would be the only proper time to change the zoom.

https://bugzilla.gnome.org/show_bug.cgi?id=787486